TAG:  qcreports_db-3-4-0-5
DATE: 11/17/2005
STAFF: lec
CHANGES:
1) TR 7247/Strain reports

TAG:  qcreports_db-3-4-0-4
DATE: 11/01/2005
STAFF: mbw
CHANGES:
1) added PIRSF load link

TAG:  qcreports_db-3-4-0-3
DATE: 10/31/2005
STAFF: lec
CHANGES: 
1) mgd/GXD_GenotypeRef.sql

TAG:  qcreports_db-3-4-0-2
DATE: 10/26/2005
STAFF: lec
CHANGES: 
1) TR 7190; mgd/MRK_GOIEA.py; change to F report

TAG:  qcreports_db-tr7062-BP
DATE: 10/14/2005
STAFF: lec
CHANGES:
1) branch point tag for MGI 3.5 (TR 7062)

TAG:  qcreports_db-3-4-0-1
TAG:  qcreports_db-3-4-0-0
DATE: 10/13/2005
STAFF: sc
RELEASE: 3.4 alpha
CHANGES: merge of pirsfload branch to trunk - note: there were no changes
         on the branch

TAG:  qcreports_db-3-3-0-5
DATE: 10/062005
STAFF: lec
CHANGES:
1) TR 7160; GXD_FullCode.py, GXD_Images.py

TAG:  qcreports_db-3-3-0-4
DATE: 09/28/2005
STAFF: lec
CHANGES:
1) TR 7125; added MRK_GOIEA.py (reports 2E, 2F)

TAG:  qcreports_db-3-3-0-3
TAG:  qcreports_db-3-3-0-2
DATE: 09/27/2005
STAFF: lec
CHANGES:
1) goStats.sh; added Fantom3
2) added PRB_Strain_PrivateRef.sql

TAG:  qcreports_db-pirsfload-3
DATE: 10/06/2005
STAFF: mbw
CHANGES:
1) added new nomen report; pirsfload

TAG:  qcreports_db-pirsfload-2
DATE: 10/06/2005
STAFF: lec
CHANGES:
1) TR 7160; GXD_FullCode.py; GXD_Images.py

TAG:  qcreports_db-pirsfload-1
DATE: 09/30/2005
STAFF: mbw
CHANGES:
1) pirsfload dev build

TAG:  qcreports_db-pirsfload-BP
DATE: 09/17/2005
STAFF: mbw
CHANGES:
1) pirsfload

TAG:  qcreports_db-3-3-0-1
DATE: 08/23/2005
STAFF: lec
RELEASE: A
1) OMIM branch merge

TAG:  qcreports_db-3-2-2-11
DATE: 08/11/2005
STAFF: mbw
RELEASE: A
CHANGES: fixed qcr.html file

TAG:  qcreports_db-3-2-2-10
DATE: 08/08/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) TR 7013/GXD_ImageCheck.sql

TAG:  qcreports_db-3-2-2-9
DATE: 08/08/2005
STAFF: mbw
RELEASE: A
CHANGES:
1) merged tr6046 to trunk

TAG: qcreports_db-tr6046-2
DATE: 08/04/05
STAFF: mbw
CHANGES:
1) modified qcr.html

TAG: qcreports_db-tr6046-1
DATE: 08/03/05
STAFF: mbw