@@ -93,13 +93,10 @@ be used at times to test reports for <I>future</I> public consumption.)
 <A NAME="probes"><B>Probes</B></A>
 <OL>
 <LI><A HREF="/data/reports/qcreports_db/output/PRB_Reference.sql.rpt">Probes/Primers w/out References</A>
-<LI><A HREF="/data/reports/qcreports_db/output/PRB_Marker.sql.rpt">Probes Used More Than Once for Marker/Duplicate Markers/No Markers (excluding IMAGE, RPCI, NIA, RIKEN clones)</A>
+<LI><A HREF="/data/reports/qcreports_db/output/PRB_Marker.sql.rpt">Duplicate Markers;No Markers (excluding IMAGE, RPCI, NIA, RIKEN clones) (this file contains 2 separate reports)</A>
 <LI><A HREF="/data/reports/qcreports_db/output/PRB_NoGenBank.sql.rpt">No GenBank IDs - Sequence in Paper</A>
 <LI><A HREF="/data/reports/qcreports_db/output/PRB_NoMarkerSeq.sql.rpt">Molecular Segments with Encoding Markers and Sequence IDs and no corresponding Marker-Sequence ID association</A>
-<LI><A HREF="/data/reports/qcreports_db/output/PRB_MarkerSeq.sql.rpt">IMAGE Clone/Marker Sequence Anomalies</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MGI_ProblemSequence.rpt">Molecular Segment with the Problem Sequence Note associated with more than one GenBank Seqid or associated with no GenBank Seqid</A>
-<LI><A HREF="ftp://devftp.informatics.jax.org/pub/reports/MGI_ProblemSequence.rpt">Public Problem Sequence Report</A>
-<LI><A HREF="/data/reports/qcreports_db/output/PRB_RIKENMarkers.rpt">RIKEN Clones and MGI Markers</A>
 </OL>
 
 <A NAME="mapping"><B>Mapping</B></A>
