@@ -1,3 +1,13 @@
+TAG:  qcreports_db-3-4-0-6
+DATE: 11/21/2005
+STAFF: lec
+CHANGES:
+1) various enhancements/fixes to probe reports:
+	PRB_NoMarkerSeq.sql
+	PRB_Marker.sql
+	MGI_ProblemSequence.py
+	PRB_MarkerSeq.sql (removed)
+
 TAG:  qcreports_db-3-4-0-5
 DATE: 11/17/2005
 STAFF: lec
